--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ summary {
 }
 
 .faq{
-  background-image: url(/assets/images/background-mobile.png);
+  background-image: url(../assets/images/background-mobile.png);
   background-position: top; 
   background-size: contain;
   background-repeat: no-repeat;
@@ -74,7 +74,7 @@ summary {
 padding-top: 142px;
  
 @media (min-width: 768px){
-  background-image: url(/assets/images/background-desktop.png);
+  background-image: url(../assets/images/background-desktop.png);
   padding-top: 167px;
   max-height: 320px;
 }
@@ -112,7 +112,7 @@ margin: auto;
   display: inline-block;
   width: 24px;
   height: 24px;
-  background-image: url(/assets/images/icon-star.svg);
+  background-image: url(../assets/images/icon-star.svg);
   background-repeat: no-repeat;
   background-size: cover;
   margin-right: 24px;
