--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ margin: auto;
       display: inline-block;
       width: 40px;
       height: 40px;
-      background-image: url(/assets/images/icon-star.svg);
+      background-image: url(../assets/images/icon-star.svg);
       background-repeat: no-repeat;
       background-size: cover;
       margin-right: 24px;
